# claude-glass-widget

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: build.ps1  dev.ps1  generate-icons.mjs
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ccusage.rs  commands.rs  lib.rs  main.rs  tray.rs  window.rs
src/components/: ClaudeLogo.tsx  DailyTokenSection.tsx  ExpandedPanel.tsx  GlassCard.tsx  Header.tsx  MiniChart.tsx  NoData.tsx  ProgressBar.tsx  ResetSection.tsx  SectionLabel.tsx  SessionSection.tsx  Settings.tsx  StatTile.tsx  StatusIndicator.tsx  UsageSection.tsx  icons.tsx
src/hooks/: useCountdown.ts  useUsagePolling.ts  useWindowControls.ts
src/lib/: tauri.ts  utils.ts
src/lib/providers/: SyncProvider.ts  ccusage.ts  index.ts  mock.ts  types.ts
src/store/: settingsStore.ts  uiStore.ts  usageStore.ts
src/types/: usage.ts
